Added CRUD functionality for folders
1. Added Folder RestController
2. Added logic in FolderService
3. Added exception handlers
4. Added recursive query to find full folder path
5. Fixed schema and table naming
6. Fixed logic in FileService to handle mode exceptions